# bases_comerciales

./: .gitignore  README.md  pyproject.toml
projects/_template/: config.yaml
projects/bendo/: .gitignore  .~lock.reporte_pipeline.xlsx#  construccion_base.md  facturacion_template.vim  reporte_pipeline.xlsx  resumen_bendo.xlsx  traer_info_bendo.sh
projects/bendo/extraer_bendo/: extraer.json  rucs_presentar.psv  valores.psv
projects/bendo/extraer_bendo/sql/: balances.sql  base_rucs.sql  cedula_representantes.sql  contactabilidad.sql  facturacion.sql  facturacion_template.vim  informacion_general.sql  sweet_coffe.sql
projects/bendo/scripts/: consolidador.ipynb  consolidador.py  construir_base.py  facturacion_template.vim  generar_reporte.py  prueba_paralelizacion_bash.sh  traer_info_bendo.sh
projects/bendo/scripts/tests/: test_RIMPES.py  test_construir_base.py
projects/categorias_comerciales/: categoria establecimeinto 1.xlsx  categorias_.xlsx  diccionario_categorias_establecimientos.xlsx  juntar_archivos.ipynb  revision_categorias.ipynb
projects/categorias_comerciales/data/: categorias.csv
projects/categorias_comerciales/extraer_categorias_comerciales/: extraer.json
projects/categorias_comerciales/extraer_categorias_comerciales/sql/: base_rucs_sri.sql
projects/retenciones_info/: MerchantsWithSubsidiaries_69ce7dfe4be258739510ec6a.xlsx
projects/retenciones_info/extraer_retenciones_info/: extraer.json  valores.psv
projects/retenciones_info/scripts/: query_script.vim  top_rucs_por_monto.sql
tools/extraer/tests/: test_cli.py  test_traer_datos.py
(+12 files in other folders)
